# microsim-app

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: .gitignore  main.py  pyproject.toml
backend/tests/: test_main.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: VivIntegration.tsx  main.tsx
