[project]
name = "microsim-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
